src/objects/TPO__c.object
<CustomObject>
    <fields>
        <fullName>CDA_Active__c</fullName>
        <label>CDA Active</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <label>Notes</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Secure_Email_Method__c</fullName>
        <label>Secure Email Method</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>TLS</fullName>
                </value>
                <value>
                    <fullName>PXE</fullName>
                </value>
                <value>
                    <fullName>Awaiting TLS</fullName>
                </value>
                <value>
                    <fullName>Awaiting PXE</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Secure_Email_Status__c</fullName>
        <label>Secure Email Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Secure</fullName>
                </value>
                <value>
                    <fullName>Pending</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TPO_Contact_Phone_Number__c</fullName>
        <label>TPO Contact Phone Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TPO_Contact__c</fullName>
        <label>TPO Contact</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TPO_Email__c</fullName>
        <label>TPO Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>TPO_Record_Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>TPO Record Manager</label>
        <referenceTo>User</referenceTo>
        <relationshipName>RWE_TPOs_DF</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TPO_Sponsor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>TPO Sponsor</label>
        <referenceTo>User</referenceTo>
        <relationshipName>TPO_DF</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Website_Address__c</fullName>
        <label>Website Address</label>
        <type>Url</type>
    </fields>
    <label>TPO</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>TPO Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>TPOs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>